src/objects/SponsorQualification__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>SponsorQualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CampaignAdTime__c</fullName>
        <description>Shows time for  campaigns in status = In Progress</description>
        <formula>IF( ISPICKVAL(Campaign__r.Status , &apos;IN PROGRESS&apos;) , Campaign__r.TotalAdTime__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Ad Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Qualified Accounts</relationshipLabel>
        <relationshipName>SponsorQualifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TherapeuticCategory__c</fullName>
        <formula>TEXT(Campaign__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Therapeutic Category</label>
        <type>Text</type>
    </fields>
    <label>Sponsor Qualification</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsor Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>